HelloUltraviolet/Fixtures/RejectedSource/FFI/HostExportOutsideLibrary/Source/Main.uv
//! Rejected FFI specimen for hosted exports outside library assemblies.

[[host_export("C")]]
public procedure hostedValue() -> i32 {
    return 0
}

public procedure main(move context: Context) -> i32 {
    return 0
}
